// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration result component renders registration complete properly 1`] = `
<View
  className="css-1c0zneh-Container"
  style={
    Array [
      Object {},
    ]
  }
>
  <View>
    <View
      className="css-zcxndt"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        className="css-yikrym"
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-check-green.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
            },
          ]
        }
      />
      <Text
        className="css-j5r89d-Title sc-bwzfXH uTxCW"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
            },
          ]
        }
      >
        Registration complete
      </Text>
      <View
        className="css-r7q7qr"
        style={
          Array [
            Object {
              "display": "flex",
            },
          ]
        }
      >
        <Text
          className="css-1l2ig8f sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Thank you for registering. You’re now eligible
to bid on works in this sale.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      className="css-1xu3tth sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration error properly 1`] = `
<View
  className="css-1c0zneh-Container"
  style={
    Array [
      Object {},
    ]
  }
>
  <View>
    <View
      className="css-zcxndt"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        className="css-yikrym"
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-x-red.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
            },
          ]
        }
      />
      <Text
        className="css-j5r89d-Title sc-bwzfXH uTxCW"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
            },
          ]
        }
      >
        An error occured
      </Text>
      <View
        className="css-r7q7qr"
        style={
          Array [
            Object {
              "display": "flex",
            },
          ]
        }
      >
        <Text
          className="css-1l2ig8f sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Please contact 
          <Text
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
              ]
            }
          >
            support@artsy.net
          </Text>
          
with any questions.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      className="css-1xu3tth sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration pending properly 1`] = `
<View
  className="css-1c0zneh-Container"
  style={
    Array [
      Object {},
    ]
  }
>
  <View>
    <View
      className="css-zcxndt"
      style={
        Array [
          Object {},
        ]
      }
    >
      <Image
        className="css-yikrym"
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-exclamation.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
            },
          ]
        }
      />
      <Text
        className="css-j5r89d-Title sc-bwzfXH uTxCW"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
            },
          ]
        }
      >
        Registration pending
      </Text>
      <View
        className="css-r7q7qr"
        style={
          Array [
            Object {
              "display": "flex",
            },
          ]
        }
      >
        <Text
          className="css-1l2ig8f sc-bdVaJa bDWFJH"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Your registration status is pending.
Please contact 
          <Text
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
              ]
            }
          >
            support@artsy.net
          </Text>
           for
more information.
        </Text>
        <Text />
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      className="css-1xu3tth sc-bdVaJa bDWFJH"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
